# driver-location/internal/dto/request.go
@@ -1,5 +1,10 @@
 package dto
 
+type GeoJSONPoint struct {
+	Type        string    `json:"type" binding:"required,eq=Point" example:"Point"`
+	Coordinates []float64 `json:"coordinates" binding:"required,len=2" example:"28.9784,41.0082" swaggertype:"array,number"`
+}
+
 type CreateLocationRequest struct {
 	Latitude  float64 `json:"latitude" binding:"required,latitude"`
 	Longitude float64 `json:"longitude" binding:"required,longitude"`
@@ -10,7 +15,6 @@ type CreateLocationBulkRequest struct {
 }
 
 type SearchLocationRequest struct {
-	Latitude  float64 `json:"latitude" binding:"required,latitude"`
-	Longitude float64 `json:"longitude" binding:"required,longitude"`
-	Radius    float64 `json:"radius" binding:"required,min=0.1,max=50"`
+	Location GeoJSONPoint `json:"location" binding:"required"`
+	Radius   float64      `json:"radius" binding:"required,min=10,max=10000"`
 }
